	(EXTRA_SECTION_FUNCTIONS): Rework to use individual function macros.
	(READONLY_DATA_FUNCTION, ONE_ONLY_READONLY_DATA_SECTION_FUNCTION,
	ONE_ONLY_DATA_SECTION_FUNCTION, FORGET_SECTION_FUNCTION): New defines
	for EXTRA_SECTION_FUNCTIONS.
	* doc/install.texi: Update binutils requirements.

2004-07-20  Nathan Sidwell  <nathan@codesourcery.com>

	* dbxout.c (dbxout_type): Fix printf format.

	* tree.h (binfo_member): Remove.
	* tree.c (binfo_member): Remove.

2004-07-20  Nathan Sidwell  <nathan@codesourcery.com>

	* tree.h: Include vec.h
	(DEF_VEC_P(tree)): New type.
	(BINFO_BASE_BINFOS, BINFO_N_BASE_BINFOS, BINFO_BASE_BINFO): Adjust.
	(BINFO_BASE_APPEND, BINFO_BASE_ITERATE): New.
	(BINFO_LANG_SLOT): Remove.
	(BINFO_SUBVTT_INDEX, BINFO_VPTR_INDEX, BINFO_PRIMARY_BASE_OF): New.
	(struct tree_binfo): Turn base_binfos into a trailing
	VEC(tree). Add vtt_subvtt, vtt_vptr, primary fields.
	(binfo_lang_slots): Remove.
	* tree.c (binfo_lang_slots): Remove.
	(make_tree_binfo_stat): Take a base binfo count, not a
	lang slot count.  Adjust.
	* Makefile.in (TREE_H): Add vec.h
	* alias.c (record_component_aliases): Adjust BINFO access.
	* dbxout.c (dbxout_type): Likewise.
	* dwarf2out.c (gen_member_die): Likewise.
	* sdbout.c (sdbout_one_type): Likewise.
	* tree-dump.c (deque_and_dump): Likewise.
	* config/i386/i386.c (classify_argument,
	contains_128bit_aligned_vector_p): Likewise.
	* config/sh/symbian.c (symbian_export_vtable_and_rtti_p): Likewise.
	* doc/c-tree.texi (Classes): Update BINFO documentation.

2004-07-20  Steven Bosscher  <stevenb@suse.de>

	* c-common.h (check_case_value): Remove prototype.
	(c_add_case_label): Adjust prototype.
	* c-common.c (check_case_value): Make static.
	(check_case_bounds): New function.
	(c_add_case_label): Use it.  Take new argument orig_type.
	* c-typeck.c (struct c_switch): New orig_type field.
	(c_start_case): Set it.
	(do_case): Pass it to c_add_case_label.
	* expr.c (expand_expr_real_1): Don't warn for out-of-bounds